# snapcheck

./: .gitignore  .pre-commit-hook.example  .snapcheck-rules.json.example  .snapcheckignore  README.md  RELEASE_NOTES.md  pyproject.toml  snapcheck.toml.example
.claude/skills/snapcheck/: SKILL.md
.claude/skills/snapcheck/scripts/: verify-workflow.sh
.github/workflows/: publish.yml  snapcheck.yml
snapcheck/: __init__.py  __main__.py  baseline.py  cli.py  compare.py  config.py  custom_rules.py  entropy.py  explain.py  fix.py  formatting.py  history.py  hooks.py  html_report.py  i18n.py  ignore.py  init_cmd.py  markdown_report.py  plugin_init.py  profiles.py  rec_commands.py  recommendations.py  redaction.py  report.py  sarif.py  smart_init.py  teach.py  validate.py
snapcheck/plugins/: __init__.py  base.py  builtin_example.py  loader.py  runner.py
snapcheck/scanners/: __init__.py  _walk.py  config_secrets.py  dangerous_files.py  disk_usage.py  duplicates.py  git_check.py  large_files.py  secrets.py
tests/: conftest.py  test_agent_skill.py  test_baseline.py  test_cli.py  test_compare.py  test_config.py  test_config_secrets.py  test_connection_strings.py  test_custom_rules.py  test_dangerous_files.py  test_dedup.py  test_disk_usage.py  test_duplicates.py  test_entropy.py  test_explain_teach.py  test_exports.py  test_i18n.py  test_i18n_cli.py  test_ignore.py  test_init.py  test_integration.py  test_large_files.py  test_markdown.py  test_plugins.py  test_profiles.py  test_recommendations.py  test_redaction.py  test_report.py  test_rules_cmd.py  test_score_breakdown.py  test_secrets.py  test_secrets_patterns.py  test_smart_init.py  test_validate.py  test_version.py  test_walk.py
tests/fixtures/git-repo/: .env
tests/fixtures/json-secrets/: naive-passwords.json
tests/fixtures/server-profile/.ssh/: id_ed25519
tests/fixtures/webroot/html/: client.ovpn
