[project]
name = "snapcheck"
dynamic = ["version"]
description = "CLI project health scanner — secrets, large files, duplicates, disk usage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
snapcheck = "snapcheck.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "snapcheck.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]